--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
         <main id="content">
             <div id="timeline-view" class="view active">
-                <div id="timeline-content" class="timeline-container">
-                    <!-- Philosophers will be injected here by JS -->
+                <div class="timeline-container">
+                    <div id="timeline-content" class="timeline-content">
+                        <!-- Philosophers will be injected here by JS -->
+                    </div>
                 </div>
             </div>
 
@@ -37,8 +39,8 @@
             </div>
 
             <div id="graph-view" class="view">
-                <div id="graph-container">
-                    <svg id="influence-graph"></svg>
+                <div id="graph-container" class="graph-container">
+                    <svg id="influence-graph" width="100%" height="100%"></svg>
                 </div>
                 <div class="graph-instructions">
                     <p>انقر على فيلسوف لعرض التفاصيل. يمكنك تحريك الدوائر وترتيبها.</p>
